<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="16dp"
    android:layout_marginTop="16dp"
    android:layout_marginEnd="16dp"
    tools:context=".ui.BreakfastFragment">

    <TextView
        android:id="@+id/tv_title_nav"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="@color/black"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_title_nav">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cv_banner"
                android:layout_width="match_parent"
                android:layout_height="220dp"
                app:cardCornerRadius="20dp"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/img_banner"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/content_image_for_banner"
                    android:foreground="@drawable/black_shadow"
                    android:scaleType="centerCrop"
                    android:src="@drawable/img_shrimp" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="16dp">

                    <TextView
                        android:id="@+id/tv_recipe_name_banner"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:ellipsize="end"
                        android:maxLines="2"
                        android:paddingStart="8dp"
                        android:paddingEnd="8dp"
                        android:text="@string/txt_recipe_name_banner"
                        android:textColor="@color/white"
                        android:textSize="24sp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@id/view_white_rounded"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="@id/view_white_rounded" />

                    <View
                        android:id="@+id/view_white_rounded"
                        android:layout_width="80dp"
                        android:layout_height="50dp"
                        android:background="@drawable/white_rounded"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@id/tv_recipe_name_banner" />

                    <TextView
                        android:id="@+id/tv_price_banner"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/txt_1_2_k"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="@id/view_white_rounded"
                        app:layout_constraintStart_toStartOf="@id/view_white_rounded"
                        app:layout_constraintTop_toTopOf="@id/view_white_rounded"
                        app:layout_constraintVertical_bias="0.2" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/txt_cooked"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="11sp"
                        app:layout_constraintEnd_toEndOf="@id/view_white_rounded"
                        app:layout_constraintStart_toStartOf="@id/view_white_rounded"
                        app:layout_constraintTop_toBottomOf="@id/tv_price_banner" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </com.google.android.material.card.MaterialCardView>

            <TextView
                android:id="@+id/tv_breakfast"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/txt_breakfast"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@id/cv_banner" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_breakfast"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@id/tv_breakfast" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>