<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:collapsedTitleTextAppearance="@style/CollapsedBarTextStyle"
            app:contentScrim="@color/orange"
            app:expandedTitleTextAppearance="@style/ExpandedBarTextStyle"
            app:layout_scrollFlags="scroll|snap|exitUntilCollapsed"
            app:title="@string/txt_detail_recipe">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="300dp">

                <ImageView
                    android:id="@+id/img_detail"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/content_image_for_detail_recipe"
                    android:foreground="@drawable/black_shadow"
                    android:scaleType="centerCrop" />

                <TextView
                    android:id="@+id/tv_name_recipe_detail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="24dp"
                    android:paddingEnd="16dp"
                    android:paddingBottom="16dp"
                    android:textColor="@color/white"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/toolbar_detail"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:theme="?attr/actionBarTheme"
                app:layout_collapseMode="pin" />
        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="40dp">

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_calories"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="16dp"
                app:cardBackgroundColor="@color/yellow"
                app:cardCornerRadius="15dp"
                app:layout_constraintEnd_toStartOf="@+id/cv_carbo"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/tv_calories_detail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="8dp"
                    android:textAlignment="center"
                    android:textSize="24sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="16dp"
                    android:text="@string/txt_calories"
                    android:textAlignment="center" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_carbo"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                app:cardBackgroundColor="@color/blue"
                app:cardCornerRadius="15dp"
                app:layout_constraintEnd_toStartOf="@+id/cv_protein"
                app:layout_constraintStart_toEndOf="@id/cv_calories"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/tv_carbo_detail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="8dp"
                    android:textAlignment="center"
                    android:textSize="24sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="16dp"
                    android:text="@string/txt_carbo"
                    android:textAlignment="center" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_protein"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="20dp"
                app:cardBackgroundColor="@color/orange"
                app:cardCornerRadius="15dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/cv_carbo"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/tv_protein_detail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="8dp"
                    android:textAlignment="center"
                    android:textSize="24sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="16dp"
                    android:text="@string/txt_carbo"
                    android:textAlignment="center" />
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/tv_description_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="20dp"
                android:textSize="16sp"
                app:layout_constraintTop_toBottomOf="@id/cv_calories" />

            <TextView
                android:id="@+id/tv_recipe_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/txt_recipe"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@id/tv_description_detail"
                app:layout_constraintStart_toStartOf="@id/tv_description_detail"
                app:layout_constraintTop_toBottomOf="@id/tv_description_detail" />

            <TextView
                android:id="@+id/tv_ingredients_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/txt_ingredients"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="@id/tv_description_detail"
                app:layout_constraintStart_toStartOf="@id/tv_description_detail"
                app:layout_constraintTop_toBottomOf="@id/tv_recipe_label" />

            <TextView
                android:id="@+id/tv_ingredients_detail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="@id/tv_description_detail"
                app:layout_constraintStart_toStartOf="@id/tv_description_detail"
                app:layout_constraintTop_toBottomOf="@id/tv_ingredients_label" />

            <TextView
                android:id="@+id/tv_instruction_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/txt_directions"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="@id/tv_description_detail"
                app:layout_constraintStart_toStartOf="@id/tv_description_detail"
                app:layout_constraintTop_toBottomOf="@id/tv_ingredients_detail" />

            <TextView
                android:id="@+id/tv_instruction_detail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="@id/tv_description_detail"
                app:layout_constraintStart_toStartOf="@id/tv_description_detail"
                app:layout_constraintTop_toBottomOf="@id/tv_instruction_label" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>